--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <!-- Bootstrap and Fontawesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./src/css/app.css">
+  <link rel="stylesheet" href="./src/css/postingIndex.css">
+  <link rel="stylesheet" href="./src/css/postingIndexItem.css">
+
 
 </head>
-  <body>
+  <body id='background'>
     <main>
       <div id="content"></div>
     </main>
