add postingDetail component and show details on index click

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="./src/css/app.css">
   <link rel="stylesheet" href="./src/css/postingIndex.css">
   <link rel="stylesheet" href="./src/css/postingIndexItem.css">
-
-
+  <link rel="stylesheet" href="./src/css/postingDetail.css">
 </head>
   <body id='background'>
     <main>
