--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./src/css/postingIndex.css">
   <link rel="stylesheet" href="./src/css/postingIndexItem.css">
   <link rel="stylesheet" href="./src/css/postingDetail.css">
+  <link rel="stylesheet" href="./src/css/footer.css">
 </head>
   <body id='background'>
     <main>
