--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="./src/css/postingIndexItem.css">
   <link rel="stylesheet" href="./src/css/postingDetail.css">
   <link rel="stylesheet" href="./src/css/footer.css">
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id" content="238871677031-8jicfipqr8nhvihigqqtek82dphi82bh.apps.googleusercontent.com">
 </head>
   <body id='background'>
     <main>
