--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="./src/css/footer.css">
   <link rel="stylesheet" href="./src/css/login.css">
   <link rel="stylesheet" href="./src/css/navbar.css">
+  <link rel="stylesheet" href="./src/css/sidebar.css">
+  <link rel="stylesheet" href="./src/css/search.css">
+
   <meta name="google-signin-client_id" content="238871677031-8jicfipqr8nhvihigqqtek82dphi82bh.apps.googleusercontent.com">
 </head>
   <body id='background'>
