--- a/index.html
+++ b/index.html
@@ -2,19 +2,9 @@
 <html>
 <head>
   <title>Better Board</title>
-  <!-- Bootstrap and Fontawesome -->
+  <!-- Bootstrap, Fontawesome, Google Sign In -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./src/css/app.css">
-  <link rel="stylesheet" href="./src/css/postingIndex.css">
-  <link rel="stylesheet" href="./src/css/postingIndexItem.css">
-  <link rel="stylesheet" href="./src/css/postingDetail.css">
-  <link rel="stylesheet" href="./src/css/footer.css">
-  <link rel="stylesheet" href="./src/css/login.css">
-  <link rel="stylesheet" href="./src/css/navbar.css">
-  <link rel="stylesheet" href="./src/css/sidebar.css">
-  <link rel="stylesheet" href="./src/css/search.css">
-
   <meta name="google-signin-client_id" content="238871677031-8jicfipqr8nhvihigqqtek82dphi82bh.apps.googleusercontent.com">
 </head>
   <body id='background'>
